added section with header

--- a/index.html
+++ b/index.html
@@ -37,44 +37,47 @@
 			<div class="container">
 				<header class="header">
 					<div class="block">
-						<a class="logo" href="">
+						<a class="block-logo" href="">
 							<img src="assets/img/logo.png" alt="logo">
 						</a>
 
-						<ul class="nav">
+						<ul class="block-nav">
 							<li><a href="">main</a></li>
 							<li><a href="">about</a></li>
 							<li><a href="">game features</a></li>
 							<li><a href="">system requirements</a></li>
 							<li><a href="">quotes</a></li>
-						</ul>
-
-						<div class="language__line">
-							<select>
-								<option>eng</option>
-								<option>rus</option>
-								<option>fra</option>
-								<option>deu</option>
-							</select>
-						</div>
-
-						<div class="block-console">
-							<a class="xbox" href="">
-								<img src="assets/img/xbox.svg" alt="Xbox Game Pass">
-							</a>
-							<a class="steam" href="">
-								<img src="assets/img/steam.svg" alt="Steam">
-							</a>
-						</div>
-
+						</ul>	
+						
+						<div class="block-option">
+							<div class="block-lang">
+								<select>
+									<option>eng</option>
+									<option>rus</option>
+									<option>fra</option>
+									<option>deu</option>
+								</select>
+							</div>
+	
+							<div class="block-console">
+								<a class="xbox" href="">
+									<img src="assets/img/xbox.svg" alt="Xbox Game Pass">
+								</a>
+								<a class="steam" href="">
+									<img src="assets/img/steam.svg" alt="Steam">
+								</a>
+							</div>
+						</div>					
 					</div>
 				</header>
 
 				<div class="block-info">
 					<h1>SURVIVE AT ALL COSTS</h1>
 					<h2>Experience new social battle royale game</h2>
-					<a href="">Buy on Steam <span>$14.99</span></a>
-					<button>the story</button>
+					<button>Buy on Steam <span>$14.99</span></button>
+					<a href="#">the story
+						<img src="assets/img/scroll_down.svg" alt="Scroll Down">
+					</a>
 				</div>
 			</div>
 		</section>
@@ -142,7 +145,8 @@
 					</div>
 					<div class="block-req5">
 						<div class="req-title">GRAPHICS:</div>
-						<div class="req-descr">NVIDIA GeForce GTX 660 2GB or AMD Radeon HD 7850 2GB DirectX11 (Shader Model 5)</div>
+						<div class="req-descr">NVIDIA GeForce GTX 660 2GB or AMD Radeon HD 7850 2GB DirectX11 (Shader
+							Model 5)</div>
 					</div>
 				</div>
 			</div>
@@ -153,7 +157,9 @@
 				<div class="block-text">
 					<div class="t2">What people think?</div>
 					<div class="t1">Press quotes</div>
-					<div class="text">Our goal is to create a product and service that you’re satisfied with and use it every day. This is why we’re constantly working on our services to make it better every day and really listen to what our users has to say.</div>
+					<div class="text">Our goal is to create a product and service that you’re satisfied with and use it
+						every day. This is why we’re constantly working on our services to make it better every day and
+						really listen to what our users has to say.</div>
 					<a href="">read more testimonials</a>
 				</div>
 
@@ -163,7 +169,7 @@
 
 					</div>
 
-					
+
 				</div>
 
 			</div>
