--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<div class="wrapper">
+	<div class="wrapper">				
 		<section class="sec1">
 			<div class="container">
 				<header class="header">
@@ -84,29 +84,29 @@
 
 		<section class="sec2">
 			<div class="container">
-				<div class="t2">What is SOS?</div>
-				<div class="t1">social battle royale game</div>
-				<div class="text">
-					<p>Each round, <span>you</span> and <span>15</span> other contestants compete to
-						escape a deadly island filled with monsters. The trick is: <span>three</span> people can
-						survive. Will you run
-						solo or form friendships with others to escape?</p>
-
-					<p>Making the right decisions could be the difference between <span>life and death.</span></p>
+				<div class="block-inner">
+					<div class="block-text">
+						<div class="t1">What is SOS?</div>
+						<div class="t2">social battle <br> royale game</div>
+						<div class="text">Each round, <span>you</span> and <span>15</span> other contestants compete to
+								escape a deadly island filled with monsters. The trick is: <span> three </span> people can
+								survive. Will you run solo or form friendships with others to escape? <br><br>
+								Making the right decisions could be the difference between <span>life and death.</span>
+						</div>
+					</div>				
+	
+					<div class="block-slider">
+						<img src="assets/img/s2_1.jpg" alt="">	
+					</div>
 				</div>
-
-				<div class="slider-block">
-
-				</div>
+				
 			</div>
-
-
 		</section>
 
 		<section class="sec3">
 			<div class="container">
-				<div class="t2">What’s so special?</div>
-				<div class="t1">features</div>
+				<div class="t1">What’s so special?</div>
+				<div class="t2">features</div>
 
 				<div class="block-feature">
 					<div class="feature-title">SURVIVE AT ALL COSTS</div>
@@ -123,8 +123,8 @@
 
 		<section class="sec4">
 			<div class="container">
-				<div class="t2">Can My Computer Run this game?</div>
-				<div class="t1">system requirements</div>
+				<div class="t1">Can My Computer Run this game?</div>
+				<div class="t2">system requirements</div>
 
 				<div class="block-req">
 					<div class="block-req1">
@@ -155,8 +155,8 @@
 		<section class="sec5">
 			<div class="container">
 				<div class="block-text">
-					<div class="t2">What people think?</div>
-					<div class="t1">Press quotes</div>
+					<div class="t1">What people think?</div>
+					<div class="t2">Press quotes</div>
 					<div class="text">Our goal is to create a product and service that you’re satisfied with and use it
 						every day. This is why we’re constantly working on our services to make it better every day and
 						really listen to what our users has to say.</div>
