--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-	<div class="wrapper">				
+	<div class="wrapper">
 		<section class="sec1">
 			<div class="container">
 				<header class="header">
@@ -47,8 +47,8 @@
 							<li><a href="">game features</a></li>
 							<li><a href="">system requirements</a></li>
 							<li><a href="">quotes</a></li>
-						</ul>	
-						
+						</ul>
+
 						<div class="block-option">
 							<div class="block-lang">
 								<select>
@@ -58,7 +58,7 @@
 									<option>deu</option>
 								</select>
 							</div>
-	
+
 							<div class="block-console">
 								<a class="xbox" href="">
 									<img src="assets/img/xbox.svg" alt="Xbox Game Pass">
@@ -67,7 +67,7 @@
 									<img src="assets/img/steam.svg" alt="Steam">
 								</a>
 							</div>
-						</div>					
+						</div>
 					</div>
 				</header>
 
@@ -89,17 +89,17 @@
 						<div class="t1">What is SOS?</div>
 						<div class="t2">social battle <br> royale game</div>
 						<div class="text">Each round, <span>you</span> and <span>15</span> other contestants compete to
-								escape a deadly island filled with monsters. The trick is: <span> three </span> people can
-								survive. Will you run solo or form friendships with others to escape? <br><br>
-								Making the right decisions could be the difference between <span>life and death.</span>
+							escape a deadly island filled with monsters. The trick is: <span> three </span> people can
+							survive. Will you run solo or form friendships with others to escape? <br><br>
+							Making the right decisions could be the difference between <span>life and death.</span>
 						</div>
-					</div>				
-	
+					</div>
+
 					<div class="block-slider">
-						<img src="assets/img/s2_1.jpg" alt="">	
+						<img src="assets/img/s2_1.jpg" alt="">
 					</div>
 				</div>
-				
+
 			</div>
 		</section>
 
@@ -181,6 +181,48 @@
 		</section>
 
 		<footer class="footer">
+			<div class="container">
+				<div class="footer-top">
+					<a class="footer-logo" href="#">
+						<img src="assets/img/logo.png" alt="Logo">
+					</a>
+
+					<ul>
+						<li><a href="#">main</a></li>
+						<li><a href="#">about</a></li>
+						<li><a href="#">game features</a></li>
+						<li><a href="#">system requirements</a></li>
+						<li><a href="#">quotes</a></li>
+					</ul>
+
+					<div class="socials">
+						<ul>
+							<li>
+								<img class="facebook" src="assets/img/facebook.svg" alt="">
+							</li>
+							<li>
+								<img class="twitter" src="assets/img/twitter.svg" alt="">
+							</li>
+							<li><img class="youtube" src="assets/img/Vector.svg" alt="">
+							</li>
+							<li><img class="twitch" src="assets/img/twitch.svg" alt="">
+							</li>
+						</ul>
+					</div>
+				</div>
+
+				<div class="footer-bot">
+					<div class="copy">© 2018 Outpost Games, Inc. All Rights Reserved</div>
+
+					<ul>
+						<li><a href="#">Privacy Policy </a></li>
+						<li><a href="#">Terms of Services </a></li>
+						<li><a href="#">Code of Conduct </a></li>
+					</ul>
+				</div>
+			</div>
+
+
 
 		</footer>
 	</div>
