--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 					<div class="features-tabs">
 						<div class="features-tab">
 							<div class="features-tab_title">SURVIVE AT ALL COSTS</div>
-							<div class="features-tab_descr">You have 30 minutes to find a relic, signal for extraction,
-								and grab
+							<div class="features-tab_descr">You have 30 minutes to find a relic, signal for extraction, and grab
 								one of three spots on the rescue chopper.
 							</div>
 						</div>
@@ -358,9 +357,9 @@
 			</div>
 		</footer>
 	</div>
-
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="assets/js/jquery.formstyler.min.js"></script>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="assets/js/jquery.formstyler.min.js"></script>	
 	<script src="assets/js/main.js"></script>
 </body>
 
