--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 	<title>SOS</title>
 	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="assets/fonts/fonts.css">
+	<link rel="stylesheet" href="assets/css/animate.css" />
 	<link rel="stylesheet" href="assets/css/jquery.formstyler.css" />
 	<link rel="stylesheet" href="assets/css/jquery.formstyler.theme.css" />
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -44,11 +45,11 @@
 						</a>
 
 						<ul class="block-nav">
-							<li><a href="">main</a></li>
-							<li><a href="">about</a></li>
-							<li><a href="">game features</a></li>
-							<li><a href="">system requirements</a></li>
-							<li><a href="">quotes</a></li>
+							<li><a href="#">main</a></li>
+							<li class="m1"><a href="#">about</a></li>
+							<li class="m2"><a href="#">game features</a></li>
+							<li class="m3"><a href="#">system requirements</a></a></li>
+							<li class="m4"><a href="#">quotes</a></li>
 						</ul>
 
 						<div class="block-option">
@@ -74,9 +75,9 @@
 				</div>
 
 				<div class="header-info">
-					<h1>SURVIVE AT ALL COSTS</h1>
-					<h2>Experience new social battle royale game</h2>
-					<button>Buy on Steam <span>$14.99</span></button>
+					<h1 class="wow bounceInDown" data-wow-delay="0.5s">SURVIVE AT ALL COSTS</h1>
+					<h2 class="wow bounceInDown" data-wow-delay="1s">Experience new social battle royale game</h2>
+					<button class="wow bounceInDown" data-wow-delay="2s">Buy on Steam <span>$14.99</span></button>
 					<a href="#">the story
 						<svg width="23" height="11" viewBox="0 0 23 11" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M21.5786 1.40393H1.32422L11.338 9.57305L21.5786 1.40393Z" stroke="white"
@@ -88,13 +89,13 @@
 
 		</header>
 
-		<section class="about">
+		<section class="about" id="about" data-scrollspy="#about">
 			<div class="container">
 				<div class="about-inner">
 					<div class="about-info">
-						<div class="about-title">What is SOS?</div>
-						<div class="about-subtitle">social battle <br> royale game</div>
-						<div class="about-descr">Each round, <span>you</span> and <span>15</span> other contestants
+						<div class="about-title wow fadeInLeftBig" data-wow-delay="0.5s">What is SOS?</div>
+						<div class="about-subtitle wow fadeInLeftBig" data-wow-delay="1s">social battle <br> royale game</div>
+						<div class="about-descr wow fadeInLeftBig" data-wow-delay="2s">Each round, <span>you</span> and <span>15</span> other contestants
 							compete to
 							escape a deadly island filled with monsters. The trick is: <span> three </span> people can
 							survive. Will you run solo or form friendships with others to escape? <br><br>
@@ -109,16 +110,17 @@
 			</div>
 		</section>
 
-		<section class="features">
+		<section class="features" id="features" data-scrollspy="#features">
 			<div class="container">
 				<div class="features-inner">
-					<div class="features-title">What’s so special?</div>
-					<div class="features-subtitle">features</div>
+					<div class="features-title wow fadeInRightBig" data-wow-delay="1s">What’s so special?</div>
+					<div class="features-subtitle wow fadeInRightBig" data-wow-delay="1s">features</div>
 
-					<div class="features-tabs">
+					<div class="features-tabs wow fadeInRightBig" data-wow-delay="1s">
 						<div class="features-tab">
 							<div class="features-tab_title">SURVIVE AT ALL COSTS</div>
-							<div class="features-tab_descr">You have 30 minutes to find a relic, signal for extraction, and grab
+							<div class="features-tab_descr">You have 30 minutes to find a relic, signal for extraction,
+								and grab
 								one of three spots on the rescue chopper.
 							</div>
 						</div>
@@ -140,17 +142,15 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
-
 		</section>
 
-		<section class="config">
+		<section class="config" id="config" data-scrollspy="#config">
 			<div class="container">
-				<div class="config-title">Can My Computer Run this game?</div>
-				<div class="config-subtitle">system requirements</div>
+				<div class="config-title wow bounceInDown" data-wow-delay="0.5s">Can My Computer Run this game?</div>
+				<div class="config-subtitle wow bounceInDown" data-wow-delay="1s">system requirements</div>
 
-				<div class="config-inner">
+				<div class="config-inner wow bounceInDown" data-wow-delay="2s">
 					<div class="grid-container">
 						<div class="config-block">
 							<div class="config-block_title">OS:</div>
@@ -182,22 +182,22 @@
 			</div>
 		</section>
 
-		<section class="quotes">
+		<section class="quotes" id="quotes" data-scrollspy="#quotes">
 			<div class="container">
 				<div class="quotes-items">
 					<div class="quotes-item">
-						<div class="quotes-title">What people think?</div>
-						<div class="quotes-subtitle">Press quotes</div>
-						<div class="quotes-text">Our goal is to create a product and service that you’re satisfied with
+						<div class="quotes-title wow fadeInLeftBig" data-wow-delay="0.5s">What people think?</div>
+						<div class="quotes-subtitle wow fadeInLeftBig" data-wow-delay="1s">Press quotes</div>
+						<div class="quotes-text wow fadeInLeftBig" data-wow-delay="1.5s">Our goal is to create a product and service that you’re satisfied with
 							and use
 							it every day. This is why we’re constantly working on our services to make it better every
 							day and
 							really listen to what our users has to say.</div>
-						<a href="#">Read more testimonials</a>
+						<a href="#" class="wow fadeInLeftBig" data-wow-delay="2s">Read more testimonials</a>
 					</div>
 
 					<div class="quotes-item">
-						<div class="quotes-user">
+						<div class="quotes-user wow fadeInRightBig" data-wow-delay="1s">
 							<div class="quotes-user_box">
 								<div class="quotes-user_avatar">
 									<img src="assets/img/avatar-1.jpg" alt="avatar">
@@ -215,7 +215,7 @@
 							</div>
 						</div>
 
-						<div class="quotes-user">
+						<div class="quotes-user wow fadeInRightBig" data-wow-delay="1s">
 							<div class="quotes-user_box">
 								<div class="quotes-user_avatar">
 									<img src="assets/img/avatar-2.jpg" alt="avatar">
@@ -235,7 +235,7 @@
 							</div>
 						</div>
 
-						<div class="quotes-user">
+						<div class="quotes-user wow fadeInRightBig" data-wow-delay="1s">
 							<div class="quotes-user_box">
 								<div class="quotes-user_avatar">
 									<img src="assets/img/avatar-3.jpg" alt="avatar">
@@ -266,13 +266,13 @@
 					</div>
 
 					<div class="subscribe-block">
-						<div class="subscribe-title">Want to stay in touch?</div>
-						<div class="subscribe-subtitle">newsletter SUBSCRIBE </div>
-						<div class="subscribe-text">In order to start receiving our news, all you have to do is enter
+						<div class="subscribe-title wow bounceInDown" data-wow-delay="0.5s">Want to stay in touch?</div>
+						<div class="subscribe-subtitle wow bounceInDown" data-wow-delay="1s">newsletter SUBSCRIBE </div>
+						<div class="subscribe-text wow bounceInDown" data-wow-delay="1.5s">In order to start receiving our news, all you have to do is enter
 							your email address. Everything else will be taken care of by us. We will send you emails
 							containing information about game. We don’t spam. </div>
 
-						<form>
+						<form class="wow fadeInUpBig" data-wow-delay="1.5s">
 							<input type="text" placeholder="Your email address" required>
 							<button type="submit">Subscribe now</button>
 						</form>
@@ -357,9 +357,11 @@
 			</div>
 		</footer>
 	</div>
-	
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	<script src="assets/js/jquery.formstyler.min.js"></script>	
+
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="assets/js/jquery.formstyler.min.js"></script>
+	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/main.js"></script>
 </body>
 
